<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<artifactId>spring-boot-starter-parent</artifactId>
		<groupId>org.springframework.boot</groupId>
		<version>1.2.0.RC2</version>
		<relativePath />
	</parent>

	<groupId>${groupId}</groupId>
	<artifactId>${artifactId}</artifactId>
	<version>${version}</version>

	<properties>
		<java.version>1.7</java.version>

		<minium.version>0.9.7-SNAPSHOT</minium.version>
		<selenium.version>2.44.0</selenium.version>

		<spring.version>4.1.2.RELEASE</spring.version>

		<minium.pupino.heap>512m</minium.pupino.heap>
		<minium.pupino.permgen>128m</minium.pupino.permgen>
		<failsafe.skip.tests>false</failsafe.skip.tests>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.vilt-group.minium</groupId>
			<artifactId>minium-script-cucumber</artifactId>
			<version>${minium.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.javascript</groupId>
					<artifactId>closure-compiler</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>selenium-htmlunit-driver</artifactId>
					<groupId>org.seleniumhq.selenium</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>com.vilt-group.minium</groupId>
			<artifactId>minium-pupino-common</artifactId>
			<version>${minium.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<skipTests>${failsafe.skip.tests}</skipTests>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>pupino</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<failsafe.skip.tests>true</failsafe.skip.tests>
			</properties>
			<dependencies>
				<dependency>
					<groupId>com.vilt-group.minium</groupId>
					<artifactId>minium-pupino-webapp</artifactId>
					<version>${minium.version}</version>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<executions>
							<execution>
								<phase>integration-test</phase>
								<goals>
									<goal>exec</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<executable>java</executable>
							<classpathScope>test</classpathScope>
							<arguments>
								<argument>-classpath</argument>
								<classpath />
								<argument>-Xmx${minium.pupino.heap}</argument>
								<argument>-XX:MaxPermSize=${minium.pupino.permgen}</argument>
								<argument>-Xdebug</argument>
								<argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</argument>
								<argument>-Dspring.profiles.active=dev,local</argument>
								<argument>minium.pupino.Application</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>engineering-snapshots</id>
			<name>VILT Engineering Snapshots Repository</name>
			<url>https://maven.vilt-group.com/content/repositories/engineering-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>engineering-releases</id>
			<name>VILT Engineering Releases Repository</name>
			<url>https://maven.vilt-group.com/content/repositories/engineering-releases/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>engineering-thirdparty</id>
			<name>VILT Engineering Thirdparty Repository</name>
			<url>https://maven.vilt-group.com/content/repositories/engineering-thirdparty/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>http://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

</project>
